// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb.Item renders the given "as" prop 1`] = `
.c0 {
  color: #0366d6;
  display: inline-block;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.selected {
  color: #444d56;
  pointer-events: none;
}

<b
  activeClassName=""
  aria-current={null}
  className="c0"
/>
`;

exports[`Breadcrumb.Item respects the "selected" prop 1`] = `
.c0 {
  color: #0366d6;
  display: inline-block;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.selected {
  color: #444d56;
  pointer-events: none;
}

<a
  aria-current="page"
  className="c0 selected"
  selected={true}
/>
`;
